fixed dark mode

--- a/style.css
+++ b/style.css
@@ -130,7 +130,7 @@ li { margin-bottom: 8px; line-height: 1.25; }
   display: none;
   position: fixed;
   inset: 0;
-  background: rgba(0,0,0,0.3);
+  background: rgba(198, 188, 188, 0.3);
   z-index: 9;
 }
 
